adding footer, edit readme

--- a/index.html
+++ b/index.html
@@ -39,4 +39,8 @@
         <h2 id="go" class="hide"> GO!</h2>
     
 </body>
+
+<footer>
+    <p>&copy Adam Primarizki. 2020.</p>
+</footer>
 </html>
