adding sfx, changing winning scene, changing overall fonts

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
     <script defer type="text/javascript" src="script.js"></script>
     <title>Mewwmory Game</title>
     
 </head>
 <body>
     <div class='congratsscreen hide' id='congratsya'>
-        <h1 id ="congrats" class="congratsmenu">SELAMAT!!!</h1>
+        <h1 id ="congrats" class="congratsmenu">Congratulation! :3</h1>
         <p class="congratsmenu" id="reset"></p>
     </div>
     
@@ -41,6 +42,6 @@
 </body>
 
 <footer>
-    <p>&copy Adam Primarizki. 2020.</p>
+    <p style= "font-family:Franklin Gothic Medium">&copy Adam Primarizki. 2020.</p>
 </footer>
 </html>
