--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="image/x-icon" href="img/logo.ico" />
     <script defer type="text/javascript" src="script.js"></script>
     <title>Mewwmory Game</title>
     
